Fixing text wrapping issues, adding scroll and deferred update of state

--- a/src/style/app.css
+++ b/src/style/app.css
@@ -5,7 +5,7 @@ body {
     color: #ffffff;
 }
 
-.scrollable {
+.container-scrollable {
     width: 100%;
     height: 600px;
     overflow: scroll;
@@ -13,4 +13,10 @@ body {
 
 .cursor-pointer {
     cursor: pointer;
+}
+
+.no-wrap {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
